Changing default font and fixing spacing in template.

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -27,7 +27,7 @@ body {
   background-color: $background-dark;
   color: $text-light;
 
-  font-family: Lato, Arial, sans-serif;
+  font-family: "Lato", Helvetica, sans-serif;
 
   a {
     color: $link;
